# lexi_graph

./: .env.example  .gitignore  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  README.md  app.py  app_chat.py  app_gradio.py  deploy.sh  deployment-README.md  main.py  main_old.py  pyproject.toml
backend/: build.sh  main.py  pyproject.toml  render.yaml  requirements.txt  test_import.py  test_quickchart.py  test_server.py
backend/core/: __init__.py  pipeline.py  utils.py
backend/output/: .gitkeep
core/: pipeline.py  utils.py
frontend/: package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FileUpload.tsx  GraphDisplay.tsx  LexiGraphInterface.tsx  ModelSelector.tsx  ProviderSelector.tsx  TextInput.tsx
