[project]
name = "lexi-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.42.0",
    "graphviz>=0.21",
    "langchain-anthropic>=0.3.18",
    "langchain-openai>=0.2.0",
    "streamlit>=1.47.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
